using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PlayerState : MonoBehaviour
{
    public bool isJumping;
    public bool isFalling;
    public bool isAttacking1;
    public bool isAttacking2;
    public bool isAttacking3;
    public bool isRunning;
    
    // Start is called before the first frame update
    void Start()
    {
        
    }

    // Update is called once per frame
    void Update()
    {
        
    }
}
